test/parser/should_succeed/main2.souc
main() = do
	print "hello world"
end
