test/parser/should_fail/statements5.souc
main() = do
    print "hteu"
    = 9
